--- a/style.css
+++ b/style.css
@@ -13,8 +13,10 @@ window#waybar {
     background: transparent;
     /*background-color: @crust;*/
     /*background-color: #333333;*/
-    background-color: rgba(30, 30, 46, 0.7);
-    color: @overlay0;
+    /* background-color: rgba(30, 30, 46, 0.7); */
+    background-color: #181824;
+    /* color: @overlay0; */
+    color: @text;
     transition-property: background-color;
     transition-duration: 0.1s;
     /*border-bottom: 1px solid @overlay1;*/
@@ -31,14 +33,15 @@ window#waybar {
 }
 
 button {
-    box-shadow: inset 0 -3px transparent;
+    /* box-shadow: inset 0 -3px transparent; */
     border: none;
     border-radius: 0;
 }
 
 button:hover {
     background: inherit;
-    color: @mauve;
+    /* color: @mauve; */
+    color: red;
     /*border-top: 2px solid @mauve;*/
 }
 
@@ -46,25 +49,28 @@ button:hover {
     /*color: @text;*/
     /*color: @sapphire;*/
     /*color: #dfc7fc;*/
-    color: @mauve;
-    /*color: @text;*/
+    /* color: @mauve; */
+    color: @text;
     padding: 0 4px;
 }
 
 #workspaces button.focused {
-    background-color: rgba(0, 0, 0, 0.3);
+    /* background-color: rgba(0, 0, 0, 0.3); */
     color: @rosewater;
     /*border-top: 2px solid @rosewater;*/
 }
 
 #workspaces button.active {
-    /*background-color: rgba(0, 0, 0, 0.3);*/
-    color: @flamingo;
-    /*border-bottom: 2px solid @mauve;*/
+    /* background-color: rgba(0, 0, 0, 0.6); */
+    /* color: @flamingo; */
+    /* color: @text; */
+    /* border-bottom: 2px solid @mauve; */
+    padding-top: 2px;
+    border-bottom: 2px solid @text;
 }
 
 #workspaces button.urgent {
-    background-color: #eb4d4b;
+    /* background-color: #eb4d4b; */
 }
 
 #pulseaudio,
@@ -90,31 +96,38 @@ button:hover {
 
 #clock {
     /*color: @maroon;*/
-    color: @mauve;
+    /* color: @mauve; */
+    /* color: white; */
+    color: @text;
     /*border-bottom: 2px solid @maroon;*/
 }
 
 #clock.date {
     /*color: @mauve;*/
-    color: @maroon;
+    /* color: @maroon; */
+    /* color: white; */
+    color: @text;
     /*border-bottom: 2px solid @mauve;*/
 }
 
 #pulseaudio {
-    color: @blue;
+    /* color: @blue; */
+    color: @text;
     /*border-bottom: 2px solid @blue;*/
 }
 
 #network {
     /*color: @yellow;*/
-    color: @rosewater;
+    /* color: @rosewater; */
+    color: @text;
     /*border-bottom: 2px solid @yellow;*/
 }
 
 #idle_inhibitor {
     margin-right: 12px;
     /*color: #7cb342;*/
-    color: @green;
+    /* color: @green; */
+    color: @text;
 }
 
 #idle_inhibitor.activated {
@@ -145,7 +158,8 @@ button:hover {
 
 #custom-power {
     margin-right: 14px;
-    color: @blue;
+    /* color: @blue; */
+    color: @text;
 }
 
 #custom-power:hover {
