waybar: use Adwaita font
fix spacing after headphone icon

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,7 +2,8 @@
 
 * {
     /*font-family: "MesloLGS Nerd Font Mono Bold";*/
-    font-family: "Hack Nerd Font";
+    /* font-family: "Hack Nerd Font"; */
+    font-family: "Adwaita Sans";
     /*font-family: "MesloLGS Nerd Font Mono";*/
     font-size: 14px;
     min-height: 0;
