set waybar font according to GTK theme (Cantarell Regular)

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -3,7 +3,8 @@
 * {
     /*font-family: "MesloLGS Nerd Font Mono Bold";*/
     /* font-family: "Hack Nerd Font"; */
-    font-family: "Adwaita Sans";
+    /* font-family: "Adwaita Sans"; */
+    font-family: "Cantarell Regular";
     /*font-family: "MesloLGS Nerd Font Mono";*/
     font-size: 14px;
     min-height: 0;
