--- a/waybar/style.css
+++ b/waybar/style.css
@@ -2,10 +2,10 @@
 
 * {
     /*font-family: "MesloLGS Nerd Font Mono Bold";*/
-    /* font-family: "Hack Nerd Font"; */
+    font-family: "Hack Nerd Font";
     /* font-family: "Adwaita Sans"; */
-    font-family: "Cantarell Regular";
-    /*font-family: "MesloLGS Nerd Font Mono";*/
+    /* font-family: "Cantarell Regular"; */
+    /* font-family: "MesloLGS Nerd Font Mono"; */
     font-size: 14px;
     min-height: 0;
     font-weight: bold;
