--- a/swaync/style.css
+++ b/swaync/style.css
@@ -1,12 +1,14 @@
+@import url("adwaita.css");
+
 * {
-  all: unset;
+  /* all: unset; */
   font-size: 12px;
   font-family: "Adwaita Sans SemiBold";
   transition: 200ms;
 }
 
 trough highlight {
-  background: #cdd6f4;
+  /* background: #cdd6f4; */
 }
 
 scale {
@@ -25,15 +27,15 @@ trough slider {
   border-radius: 12.6px;
   box-shadow: 0 0 2px rgba(0, 0, 0, 0.8);
   transition: all 0.2s ease;
-  background-color: #89b4fa;
+  /* background-color: #89b4fa; */
 }
 
 trough slider:hover {
-  box-shadow: 0 0 2px rgba(0, 0, 0, 0.8), 0 0 8px #89b4fa;
+  /* box-shadow: 0 0 2px rgba(0, 0, 0, 0.8), 0 0 8px #89b4fa; */
 }
 
 trough {
-  background-color: #313244;
+  /* background-color: #313244; */
 }
 
 /* notifications */
@@ -41,8 +43,8 @@ trough {
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #45475a;
   border-radius: 12.6px;
   margin: 18px;
-  background: #181825;
-  color: #cdd6f4;
+  /* background: #181825; */
+  /* color: #cdd6f4; */
   padding: 0;
 }
 
@@ -52,7 +54,8 @@ trough {
 }
 
 .notification-background .notification.critical {
-  box-shadow: inset 0 0 7px 0 #f38ba8;
+  /* box-shadow: inset 0 0 7px 0 #f38ba8; */
+  box-shadow: inset 0 0 7px 0 @red3;
 }
 
 .notification .notification-content {
@@ -65,15 +68,15 @@ trough {
 }
 
 .notification-content .summary {
-  color: #cdd6f4;
+  /* color: #cdd6f4; */
 }
 
 .notification-content .time {
-  color: #a6adc8;
+  /* color: #a6adc8; */
 }
 
 .notification-content .body {
-  color: #bac2de;
+  /* color: #bac2de; */
 }
 
 .notification > *:last-child > * {
@@ -84,21 +87,21 @@ trough {
   margin: 7px;
   padding: 2px;
   border-radius: 6.3px;
-  color: #1e1e2e;
-  background-color: #f38ba8;
+  /* color: #1e1e2e; */
+  /* background-color: #f38ba8; */
 }
 
 .notification-background .close-button:hover {
-  background-color: #eba0ac;
+  /* background-color: #eba0ac; */
 }
 
 .notification-background .close-button:active {
-  background-color: #f5c2e7;
+  /* background-color: #f5c2e7; */
 }
 
 .notification .notification-action {
   border-radius: 7px;
-  color: #cdd6f4;
+  /* color: #cdd6f4; */
   box-shadow: inset 0 0 0 1px #45475a;
   margin: 4px;
   padding: 8px;
@@ -106,24 +109,24 @@ trough {
 }
 
 .notification .notification-action {
-  background-color: #313244;
+  /* background-color: #313244; */
 }
 
 .notification .notification-action:hover {
-  background-color: #45475a;
+  /* background-color: #45475a; */
 }
 
 .notification .notification-action:active {
-  background-color: #585b70;
+  /* background-color: #585b70; */
 }
 
 .notification.critical progress {
-  background-color: #f38ba8;
+  /* background-color: #f38ba8; */
 }
 
 .notification.low progress,
 .notification.normal progress {
-  background-color: #89b4fa;
+  /* background-color: #89b4fa; */
 }
 
 .notification progress,
@@ -138,8 +141,8 @@ trough {
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.8), inset 0 0 0 1px #313244;
   border-radius: 12.6px;
   /* background-color: #1e1e2e; */
-  background-color: #181825;
-  color: #cdd6f4;
+  /* background-color: #181825; */
+  /* color: #cdd6f4; */
   padding: 14px;
 }
 
@@ -158,24 +161,24 @@ trough {
 }
 
 .control-center .widget-title > label {
-  color: #cdd6f4;
+  /* color: #cdd6f4; */
   font-size: 1.3em;
 }
 
 .control-center .widget-title button {
   border-radius: 7px;
-  color: #cdd6f4;
-  background-color: #313244;
+  /* color: #cdd6f4; */
+  /* background-color: #313244; */
   box-shadow: inset 0 0 0 1px #45475a;
   padding: 8px;
 }
 
 .control-center .widget-title button:hover {
-  background-color: #45475a;
+  /* background-color: #45475a; */
 }
 
 .control-center .widget-title button:active {
-  background-color: #585b70;
+  /* background-color: #585b70; */
 }
 
 .control-center .notification-group {
@@ -183,7 +186,7 @@ trough {
 }
 
 .control-center .notification-group:focus .notification-background {
-  background-color: #313244;
+  /* background-color: #313244; */
 }
 
 scrollbar slider {
@@ -205,28 +208,28 @@ scrollbar trough {
 .widget-dnd > switch {
   font-size: initial;
   border-radius: 8px;
-  background: #313244;
+  /* background: #313244; */
   box-shadow: none;
 }
 
 .widget-dnd > switch:checked {
-  background: #89b4fa;
+  /* background: #89b4fa; */
 }
 
 .widget-dnd > switch slider {
-  background: #45475a;
+  /* background: #45475a; */
   border-radius: 8px;
 }
 
 /* mpris */
 .widget-mpris-player {
-  background: #313244;
+  /* background: #313244; */
   border-radius: 12.6px;
   color: #cdd6f4;
 }
 
 .mpris-overlay {
-  background-color: #313244;
+  /* background-color: #313244; */
   opacity: 0.9;
   padding: 15px 10px;
 }
@@ -239,17 +242,17 @@ scrollbar trough {
 
 .widget-mpris-title {
   font-size: 1.2rem;
-  color: #cdd6f4;
+  /* color: #cdd6f4; */
 }
 
 .widget-mpris-subtitle {
   font-size: 1rem;
-  color: #bac2de;
+  /* color: #bac2de; */
 }
 
 .widget-mpris button {
   border-radius: 12.6px;
-  color: #cdd6f4;
+  /* color: #cdd6f4; */
   margin: 0 5px;
   padding: 2px;
 }
@@ -259,11 +262,11 @@ scrollbar trough {
 }
 
 .widget-mpris button:hover {
-  background-color: #313244;
+  /* background-color: #313244; */
 }
 
 .widget-mpris button:active {
-  background-color: #45475a;
+  /* background-color: #45475a; */
 }
 
 .widget-mpris button:disabled {
@@ -276,17 +279,17 @@ scrollbar trough {
 }
 
 .widget-menubar > box > .menu-button-bar > :last-child {
-  color: #f38ba8;
+  /* color: #f38ba8; */
 }
 
 .power-buttons button:hover,
 .powermode-buttons button:hover,
 .screenshot-buttons button:hover {
-  background: #313244;
+  /* background: #313244; */
 }
 
 .control-center .widget-label > label {
-  color: #cdd6f4;
+  /* color: #cdd6f4; */
   font-size: 2rem;
 }
 
@@ -303,21 +306,21 @@ scrollbar trough {
 }
 
 .widget-volume label {
-  color: #74c7ec;
+  /* color: #74c7ec; */
   padding: 0 1rem;
 }
 
 .widget-volume trough highlight {
-  background: #74c7ec;
+  /* background: #74c7ec; */
 }
 
 .widget-backlight trough highlight {
-  background: #f9e2af;
+  /* background: #f9e2af; */
 }
 
 .widget-backlight label {
   font-size: 1.5rem;
-  color: #f9e2af;
+  /* color: #f9e2af; */
 }
 
 .widget-backlight .KB {
