--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,4 +1,5 @@
-@import "mocha.css";
+/* @import "mocha.css"; */
+@import "adwaita.css";
 
 * {
     /*font-family: "MesloLGS Nerd Font Mono Bold";*/
@@ -15,9 +16,11 @@ window#waybar {
     background: transparent;
     /*background-color: #333333;*/
     /* background-color: rgba(30, 30, 46, 0.7); */
-    background-color: @mantle;
+    /* background-color: @mantle; */
+    background-color: @background5;
     /* color: @overlay0; */
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
     transition-property: background-color;
     transition-duration: 0.1s;
     /*border-bottom: 1px solid @overlay1;*/
@@ -42,7 +45,8 @@ button {
 button:hover {
     background: inherit;
     /* color: @mauve; */
-    color: @red;
+    /* color: @red; */
+    color: @red3;
     /*border-top: 2px solid @mauve;*/
 }
 
@@ -51,20 +55,23 @@ button:hover {
     /*color: @sapphire;*/
     /*color: #dfc7fc;*/
     /* color: @mauve; */
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
     padding: 0 4px;
 }
 
 #workspaces button.focused {
     /* background-color: rgba(0, 0, 0, 0.3); */
-    color: @rosewater;
+    /* color: @rosewater; */
+    color: @blue4;
     /*border-top: 2px solid @rosewater;*/
 }
 
 #workspaces button:hover {
     /* background-color: rgba(0, 0, 0, 0.3); */
     /* color: @mauve; */
-    color: @red;
+    /* color: @red; */
+    color: @red3;
     /*border-top: 2px solid @mauve;*/
 }
 
@@ -74,7 +81,7 @@ button:hover {
     /* color: @text; */
     /* border-bottom: 2px solid @mauve; */
     padding-top: 2px;
-    border-bottom: 2px solid @text;
+    border-bottom: 2px solid @foreground2;
 }
 
 #workspaces button.urgent {
@@ -106,7 +113,8 @@ button:hover {
     /*color: @maroon;*/
     /* color: @mauve; */
     /* color: white; */
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
     /*border-bottom: 2px solid @maroon;*/
 }
 
@@ -114,20 +122,23 @@ button:hover {
     /*color: @mauve;*/
     /* color: @maroon; */
     /* color: white; */
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
     /*border-bottom: 2px solid @mauve;*/
 }
 
 #pulseaudio {
     /* color: @blue; */
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
     /*border-bottom: 2px solid @blue;*/
 }
 
 #network {
     /*color: @yellow;*/
     /* color: @rosewater; */
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
     /*border-bottom: 2px solid @yellow;*/
 }
 
@@ -135,15 +146,18 @@ button:hover {
     margin-right: 12px;
     /*color: #7cb342;*/
     /* color: @green; */
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
 }
 
 #idle_inhibitor.activated {
-    color: @red;
+    /* color: @red; */
+    color: @red3;
 }
 
 #battery {
-    color: @green;
+    /* color: @green; */
+    color: @green4;
     /*border-bottom: 2px solid @green;*/
 }
 
@@ -158,7 +172,8 @@ button:hover {
 }
 
 #custom-vpn {
-    color: @lavender;
+    /* color: @lavender; */
+    color: @yellow2;
     border-radius: 15px;
     padding-left: 6px;
     padding-right: 6px;
@@ -167,11 +182,13 @@ button:hover {
 #custom-power {
     margin-right: 14px;
     /* color: @blue; */
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
 }
 
 #custom-power:hover {
-    color: @red;
+    /* color: @red; */
+    color: @red3;
 }
 
 #custom-notification {
@@ -179,29 +196,35 @@ button:hover {
     /*padding: 4px;*/
     /*color: @text;*/
     /*color: @teal;*/
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
 }
 
 #custom-weather {
     /*color: @flamingo;*/
-    color: @text;
+    /* color: @text; */
+    color: @foreground2;
     padding: 0.3rem 0.6rem;
     margin: 0.4rem 0.25rem;
     border-radius: 6px;
-    background-color: @mantle;
+    /* background-color: @mantle; */
+    background-color: @background5;
 }
 
 #backlight {
     /*color: @text;*/
-    color: @peach;
+    /* color: @peach; */
+    color: @foreground2;
 }
 
 tooltip label {
     /*background-color: @overlay0;*/
-    background-color: @mantle;
-    color: @text;
+    /* background-color: @mantle; */
+    background-color: @background5;
+    /* color: @text; */
+    color: @foreground2;
     /* border: 1px solid @overlay2; */
-    border: 1px solid @mantle;
+    border: 1px solid @background5;
     border-radius: 4px;
     padding: 4px;
     font-size: 14px;
