wleave: Adwaita colors

--- a/wleave/style.css
+++ b/wleave/style.css
@@ -4,7 +4,8 @@
  */
 
 window {
-    background-color: rgba(12, 12, 12, 0.8);
+    /* background-color: rgba(12, 12, 12, 0.8); */
+    background-color: rgba(0, 0, 0, 0.8);
 }
 
 button {
@@ -43,33 +44,33 @@ button:active {
 
 /* Uncomment this for colorized icons. */
 
-button#shutdown {
-    /* color: #ff8d8d; */
-    color: #f38ba8;
-}
-
-button#hibernate {
-    /* color: #a8c0ff; */
-    color: #89b4fa;
-}
-
-button#reboot {
-    /* color: #84ffaa; */
-    color: #a6e3a1;
-}
-
-button#lock {
-    /* color: #f9e2af; */
-    color: #f9e2af;
-}
-
-button#logout {
-    /* color: #f9c5af; */
-    color: #fab387;
-}
-
-button#suspend {
-    /* color: #caaff9; */
-    color: #cba6f7;
-}
+/* button#shutdown { */
+/*     /* color: #ff8d8d; */ */
+/*     color: #f38ba8; */
+/* } */
+/**/
+/* button#hibernate { */
+/*     /* color: #a8c0ff; */ */
+/*     color: #89b4fa; */
+/* } */
+/**/
+/* button#reboot { */
+/*     /* color: #84ffaa; */ */
+/*     color: #a6e3a1; */
+/* } */
+/**/
+/* button#lock { */
+/*     /* color: #f9e2af; */ */
+/*     color: #f9e2af; */
+/* } */
+/**/
+/* button#logout { */
+/*     /* color: #f9c5af; */ */
+/*     color: #fab387; */
+/* } */
+/**/
+/* button#suspend { */
+/*     /* color: #caaff9; */ */
+/*     color: #cba6f7; */
+/* } */
 
