--- a/swaync/adwaita.css
+++ b/swaync/adwaita.css
@@ -34,6 +34,7 @@
 @define-color brown4 #865e3c;
 @define-color brown5 #63452c;
 @define-color light1 #ffffff;
+@define-color rgba-light1 rgba(255,255,255, 0.9);
 @define-color light2 #f6f5f4; /* libadwaita: --light-2 */
 @define-color foreground2 #f6f5f4;
 @define-color rgba-foreground2 rgba(246, 245, 244, 0.9);
@@ -44,6 +45,7 @@
 @define-color dark2 #5e5c64;
 @define-color dark3 #3d3846;
 @define-color dark4 #241f31;
+@define-color sidebar-bg-color #2e2e32;
 @define-color dark5 #000000; /* libadwaita: --dark-5 */
 @define-color background5 #000000;
 @define-color rgba-background5 rgba(0, 0, 0, 0.8);
