--- a/swayosd/adwaita.css
+++ b/swayosd/adwaita.css
@@ -45,6 +45,7 @@
 @define-color dark2 #5e5c64;
 @define-color dark3 #3d3846;
 @define-color dark4 #241f31;
+@define-color sidebar-bg-color #2e2e32;
 @define-color dark5 #000000; /* libadwaita: --dark-5 */
 @define-color background5 #000000;
 @define-color rgba-background5 rgba(0, 0, 0, 0.8);
