--- a/waybar/adwaita.css
+++ b/waybar/adwaita.css
@@ -34,6 +34,7 @@
 @define-color brown4 #865e3c;
 @define-color brown5 #63452c;
 @define-color light1 #ffffff;
+@define-color rgba-light1 rgba(255,255,255, 0.9);
 @define-color light2 #f6f5f4; /* libadwaita: --light-2 */
 @define-color foreground2 #f6f5f4;
 @define-color rgba-foreground2 rgba(246, 245, 244, 0.9);
