wleave, waybar, swayosd and swaync use ~/.local/share/hypr25/adwaita-dark.css

--- a/swaync/style_template.css
+++ b/swaync/style_template.css
@@ -1,4 +1,4 @@
-@import url("/home/cs/.local/share/hypr25/adwaita-dark.css");
+@import url("DATA_HOME_PLACEHOLDER/hypr25/adwaita-dark.css");
 
 * {
   /* all: unset; */
