--- a/waybar/style_template.css
+++ b/waybar/style_template.css
@@ -1,6 +1,6 @@
 /* @import "mocha.css"; */
 /* @import "adwaita.css"; */
-@import url("/home/cs/.local/share/hypr25/adwaita-dark.css");
+@import url("DATA_HOME_PLACEHOLDER/hypr25/adwaita-dark.css");
 
 * {
     /*font-family: "MesloLGS Nerd Font Mono Bold";*/
